tests/e2e/semantics/nested_types5.story
function foo returns Map[int,List[int]]
	return {20: ["foo", "bar"]}

a = foo()
